* Client: proper removing (from the memory pool) transactions altered by the malleability
* Client: Relevant records are removed from SpentOutputs when expiring txs from mempool (memleak fix)
* goc - a new tool to control the node from a remote console, using a WebUI interface
* peers - a new tool to display content of the peers database
* base58 - a new tool to encode/decode base58 strings

0.9.8 - 2014-04-22
* Added locally served "Help" page to WebUI
* Some additional features on WebUI's "Home" page (e.g. network's hasharate)
* The block database uses a different index file ("blockchain.new" instead of "blockchain.idx")
  The client will convert the old index into the new one, during the first start.
  Going back to a previous version (after conversion), rename blockchain_backup.idx to blockchain.idx
  If you don't plan to go back to a previous version anymore, delete blockchain_backup.idx
* Added support for "getheaders" and "notfound" commands
* Some code in the btc lib has been restructured (now ther are functions in place of fields)

0.9.7 - 2014-04-13
* Wallets tab of WebUI has an option to move an empty address to UNUSED wallet
* A user can quickly switch wallet being at any tab of the WebUI, as well as to reload it
* SendTx tab of WebUI refreshed Address Book using Ajax and addrs.xml
* Fixes and additional test cases around parsing of alert messages
* Added unit tests for "sighash.json" from the satoshi's repo and some more unit test rework
* A link to the user manual (served at google sites) in the header of each WebUI page

0.9.6 - 2014-04-02
* Client has a hammering protection (bans peers that keep trying to reconnect)
* Miners tab of WebUI does not show crap anymore is the chain isn't up do date.
* MakeTx tab of WebUI calculates estimated transaction size after signed (assumes compressed keys)
* Downloader can work with testnet and got a fix around an empty peers db after the headers stage